# helix-integration

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md
examples/: 01_complete_workflow.py  02_example.py  03_example.py  04_example.py  05_example.py  06_example.py  07_example.py
helix_integration/: __init__.py  discord.py  manus.py  notion.py  zapier.py
