[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-integration"
version = "1.0.0"
description = "Unified orchestration across all components"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Samsara Helix"}]
    {name = "Helix Collective", email = "dev@helix.collective"},
]

[project.urls]
Homepage = "https://github.com/Deathcharge/helix-integration"
Repository = "https://github.com/Deathcharge/helix-integration.git"
